# mlops-hw1

./: .gitignore  .pre-commit-config.yaml  README.md  commands.py  infer.py  pyproject.toml  train.py
.dvc/: config
.github/workflows/: remote-push-check.yml
catdog_classifier/: __init__.py
conf/: infer_config.yaml  train_config.yaml
mnist_classifier/: __init__.py  network.py
