[tool.poetry]
name = "mnist_classifier"
version = "0.1.0"
description = "Yet another MNIST classifier"
authors = ["Ivan Lysenko"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
torch = {version = "^2.1.2+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.16.2+cpu", source = "pytorch_cpu"}
fire = "^0.5.0"
tqdm = "^4.66.1"
dvc = {extras = ["s3"], version = "^3.33.4"}

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"
pre-commit = "^3.6.0"
flake8 = "^6.1.0"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
